# agneticAI

./: .env .example  .gitignore  Makefile  README.md  directory_structure.txt  docker-compose.yml  documentation.md  perplexity.ipynb  plan.ipynb
.github/: CODEOWNERS.yml  dependabot.yml
.github/workflows/: cd.yml  ci.yml  linting.yml
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini  run_tests.sh
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  analysis_agent.py  base_agent.py  data_ingestion_agent.py  notification_agent.py  query_agent.py  report_agent.py  supervisor.py
backend/app/api/: __init__.py
backend/app/api/middleware/: __init__.py  auth.py  cors.py
backend/app/api/routes/: agents.py  conversations.py  health.py
backend/app/api/websockets/: __init__.py  agent_updates.py
backend/app/db/: __init__.py  models.py  postgres.py  redis_cache.py  vector_store.py
backend/app/graphs/: __init__.py  state.py  supervisor_graph.py
backend/app/mcp/: __init__.py  schemas.py  server.py
backend/app/mcp/tools/: api_caller.py  database_connector.py  file_reader.py
backend/app/utils/: logger.py  prompts.py
backend/tests/: __init__.py  commands.txt  conftest.py
backend/tests/test_agents/: test_analysis_agent.py  test_base_agent.py
backend/tests/test_api/: test_agent_routes.py  test_conversation_routes.py  test_health_routes.py  test_websockets.py
backend/tests/test_config/: test_settings.py
backend/tests/test_database/: test_models.py
backend/tests/test_graphs/: __init__.py  test_state.py
backend/tests/test_integration/: test_end_to_end.py  test_supervisor_workflow.py
backend/tests/test_mcp/: test_api_caller.py  test_database_connector.py  test_file_reader.py
backend/tests/test_utils/: test_logger.py
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/components/: AgentStatus.tsx  ChatInterface.tsx  Dashboard.tsx  ExecutionLogs.tsx
frontend/src/hooks/: useAgentAPI.ts  useWebSocket.ts
frontend/src/types/: agent.ts
